# MiniVecDb

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml  security-headers.md  shared-worker.js
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
crates/microvecdb-core/: Cargo.toml
crates/microvecdb-core/src/: alloc_setup.rs  distance.rs  error.rs  lib.rs  quantize.rs  storage.rs  time.rs
crates/microvecdb-core/src/hnsw/: graph.rs  mod.rs  search.rs
crates/microvecdb-python/: Cargo.toml  README.md  pyproject.toml
crates/microvecdb-python/python/minivecdb/: .gitignore  __init__.py  cache.py  langchain.py
crates/microvecdb-python/src/: lib.rs
crates/microvecdb-python/tests/: test_langchain.py
crates/microvecdb-wasm/: Cargo.toml
crates/microvecdb-wasm/src/: db.rs  lib.rs  memory.rs
examples/pdf-brain/: index.html  package.json  tsconfig.json  vite.config.ts
examples/pdf-brain/src/: App.tsx  db.ts  embedder.ts  main.ts  pdf-extractor.ts  sample-corpus.ts
examples/visual-search/: index.html  package.json  vite.config.ts
examples/visual-search/src/: App.tsx  db.ts  histogram.ts  index.css  main.ts  phash.ts
