[package]
name    = "microvecdb-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# Pass --enable-bulk-memory so wasm-opt can process the binary.
# Bulk-memory (memory.copy/fill) is supported in all modern browsers since 2020.
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-simd", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
microvecdb-core         = { path = "../microvecdb-core", features = ["allocator"] }
wasm-bindgen            = "0.2"
js-sys                  = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
